fix x-overflow align item on sm divices ad original color on bacgrounds changin forms , 100% changes required done

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 .backgroundImage {
-  background: url("../img/code6.jpg") center;
+  background: url("../img/code61.jpg") center;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
+}
+
+body {
+  max-width: 1800px;
+  margin: auto;
+  font-family: Helvetica, sans-serif;  /* font-family */
 }
 
 .foterLogo {
@@ -10,11 +16,35 @@
 }
 
 .bgFirst {
-  background: rgb(231, 121, 57);
+  background: rgba(246, 128, 93);
+}
+
+.navBg {
+  background: rgb(231, 103, 86);
+}
+
+.bgBlue {
+  background: rgb(91, 161, 240);
 }
 
 .bgSecond {
   background: rgb(218, 213, 213);
+}
+
+.formBackground {
+  background-color: rgba(255, 255, 255, 0.6); 
+}
+
+.botonStyle {
+  min-width: 120px;
+}
+
+.textsIZE {
+  font-size: 13px;
+}
+
+.form2 {
+  height: 33px; 
 }
 
 .img1 {
@@ -33,8 +63,76 @@
   list-style: none;
 }
 
+.bgBlack {
+  background: black;
+}
+
+.bgGrey {
+  background: rgb(70, 68, 68);
+}
+
+.dFlexBet{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.dFlexForm {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: flex-end;
+}
+
+.searchHeadernone {
+  display: block;
+}
+
+.title1 {
+  font-size: 25px;
+}
+
+@media (max-width: 1024px) { /* using media queries to hide text */
+  .textNone {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .foterLogo {
+    width: 40px;
+  }
+
+  .dFlexBet{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .foterText {
+    font-size: 8px;
+  }
+
+  .searchHeadernone {
+    display: none;
+  }
+
+  .botonCenter {
+    text-align: center;
+    margin: auto;
+  }
+}
+
+
 @media (max-width: 400px) {
+  
   .backgroundImage {
     height: 100vh;
+  }
+  .foterText {
+    font-size: 5px;
+  }
+  .foterLogo {
+    width: 20px;
   }
 }
